# aoc-2024

./: .gitignore  Cargo.toml  LICENSE  rust-toolchain.toml  shell.nix
src/: day1.rs  day10.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs  main.rs
