[package]
name = "aoc-2024"
version = "0.1.0"
edition = "2024"

[build]
rustflags = ["-C", "target-cpu=native"]

[profile.test]
opt-level = 3

[profile.bench]
opt-level = 3

[profile.dev]
opt-level = 3

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"] }
nom = "7.1.3"
rayon = "1.10.0"
regex = "1.11.1"
