[package]
name = "aoc-2024"
version = "0.1.0"
edition = "2024"

[build]
rustflags = ["-C", "target-cpu=native", "-C", "link-arg=-fuse-ld=lld", "-Zthreads=8"]

[profile.test]
opt-level = 3

[profile.bench]
opt-level = 3

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"] }
nom = "7.1.3"
rayon = "1.10.0"
regex = "1.11.1"
tikv-jemallocator = "0.6.0"

[clippy]
corectness = "deny"
suspicious = "deny"
complexity = "deny"
perf = "deny"
style = "warn"
pedantic = "warn"
cargo = "warn"